--- a/css/modules/progress.css
+++ b/css/modules/progress.css
@@ -12,7 +12,7 @@ body {
 }
 
 #virtualclassCont.congrea .progressbar {
-  margin: 5px 0;
+  margin: 10px 0;
   padding: 0;
   counter-reset: step;
 }
@@ -26,7 +26,11 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #7d7d7d;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+
+#virtualclassCont.congrea .progressbar li {
+  color: #c3c3c3;
 }
 
 #virtualclassCont.congrea .progressbar li::before {
