--- a/css/modules/custom.css
+++ b/css/modules/custom.css
@@ -14,6 +14,7 @@
   font-size: 1.25rem;
   text-align: center;
   margin-bottom: 1.25rem;
+  text-transform: capitalize;
 }
 
 #virtualclassCont.congrea #virtualclassPreCheck .result div {
