--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -1597,8 +1597,8 @@ div.ui-memblist-usr .userVideos {
   padding: 0.5rem 0.625rem;
   margin-top: 0.625rem;
   border: 0.5px solid #e6e6e673;
-  background-color: #f7f7f7;
-  box-shadow: 0 3px 3px -3px #585858;
+  background-color: #fff;
+  box-shadow: 0 1px 2px 1px #e8e8e8;
   border-radius: 50%;
   text-align: center;
   vertical-align: middle;
