--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -1995,7 +1995,7 @@ div.ui-memblist-usr .userVideos {
 
 #virtualclassCont.congrea #mainerrorContainer .errorContainer {
   background-color: #ffbebe;
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
+  padding: 1.2rem 2rem 1.2rem 1.3rem;
   border-radius: 5px;
   text-align: left;
   z-index: 1103;
@@ -3643,6 +3643,7 @@ span#usertab_text {
   padding: 0;
   max-height: unset;
   box-shadow: 0 2px 10px 0 rgba(32,33,36,0.28) !important;
+  border-radius: 12px;
 }
 
 /** suman start **/
