--- a/css/modules/icon.css
+++ b/css/modules/icon.css
@@ -705,6 +705,7 @@
 
 #virtualclassCont.congrea .shapes_icon .icon-shapes.cgIcon::before {
   content: "\e994";
+  font-size: 21px;
 }
 
 #virtualclassCont.congrea .shapesToolbox[data-currTool="shapes"] .shapes_icon .icon-shapes.cgIcon::before {
