--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -3693,6 +3693,7 @@ span#usertab_text {
 
 #virtualclassPreCheck #preCheckcontainer .modal-dialog .modal-content {
   padding: 0;
+  max-height: unset;
 }
 
 /** suman start **/
