--- a/css/modules/custom.css
+++ b/css/modules/custom.css
@@ -6,7 +6,7 @@
 #virtualclassCont.congrea #virtualclassPreCheck.bootstrap .btn {
   border-color: #c2c2c2;
   float: right;
-  padding: 4px 12px;
+  padding: 0.25rem 0.75rem;
   font-size: 0.875rem;
 }
 
