--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -1989,25 +1989,28 @@ div.ui-memblist-usr .userVideos {
 
 #virtualclassCont.congrea #mainerrorContainer {
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  bottom: 15px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    bottom: 3.25rem;
+    z-index: 1001;
 }
 
 #virtualclassCont.congrea #mainerrorContainer .errorContainer {
   background-color: #ffbebe;
-  padding: 1.2rem 2rem 1.2rem 1.3rem;
+  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem 1.5rem 1rem 1rem;
   border-radius: 5px;
   text-align: left;
   z-index: 1103;
   width: fit-content;
-  max-width: 270px;
+  max-width: 370px;
   width: -moz-fit-content;
   color: #4b5658;
   border-left: 5px solid #ed5a5a;
-  box-shadow: 0px 3px 3px 0px #757575;
+  box-shadow: 0px 1px 3px 0px #757575;
+  /* box-shadow: 0px 0px 1px 1px #ff7e7e; */
   position: relative;
-  margin: 6px;
+  margin: 4px 6px;
   display: inline-block;
 }
 
@@ -3058,19 +3061,19 @@ div.ui-memblist-usr .userVideos {
 
 #virtualclassCont.congrea .errorContainer .close {
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 0;
+  top: 0;
   color: #fff;
   -moz-appearance: none;
   -webkit-appearance: none;
   background-color: #ed595a;
   border: none;
-  border-radius: 4px;
+  border-radius: 0 4px;
   cursor: pointer;
   pointer-events: auto;
   display: inline-block;
-  height: 20px;
-  width: 20px;
+  height: 1.25rem;
+  width: 1.25rem;
   text-align: center;
 }
 
@@ -3647,6 +3650,10 @@ span#usertab_text {
   box-shadow: 0 2px 10px 0 rgba(32,33,36,0.28) !important;
   border-radius: 12px;
   max-height: unset;
+}
+
+#virtualclassPreCheck #preCheckcontainer .modal-dialog .modal-content .modal-body {
+  padding: 0.9375rem;
 }
 
 /** suman start **/
@@ -4265,7 +4272,7 @@ span#usertab_text {
   color: #fff;
   order: 3;
   z-index: 1000;
-  padding: 0.6875rem 0.9375rem;
+  padding: 0.75rem 0.8125rem 0.6875rem 0.8125rem;
   cursor: pointer;
 }
 
