--- a/templates/footerBar.hbs
+++ b/templates/footerBar.hbs
@@ -63,10 +63,10 @@
         </span>
         {{> audioWidget}}
         <div id="fullScreenButton">
-            <span class="congtooltip fullScreen" data-title="Full Screen"><i class="icon-fullScreen cgIcon"></i></span>
+            <span class="congtooltip fullScreen" data-title="{{getString 'fullScreen'}}"><i class="icon-fullScreen cgIcon"></i></span>
         </div>
         <div id="fullScreenExitButton">
-            <span class="congtooltip" data-title="Exit Full Screen"><i class="icon-exitScreen cgIcon"></i></span>
+            <span class="congtooltip" data-title="{{getString 'exitFullScreen'}}"><i class="icon-exitScreen cgIcon"></i></span>
         </div>
 
         <div id="bookmark">
