Add string for joinNow

--- a/templates/joinclass.hbs
+++ b/templates/joinclass.hbs
@@ -6,8 +6,8 @@
            <div class="modal-content">
              <div class="modal-body">
                 <div class="joinClasscontainer text-center">
-                  <div class="textCont">Click here to continue</div>
-                  <button type="button" class="btn btn-default">Continue</button>
+                  <div class="textCont">{{getString 'continueText'}}</div>
+                  <button type="button" class="btn btn-default">{{getString 'continue'}}</button>
                 </div>
              </div>
            </div>
