add string for move sidebar button

--- a/templates/leftBar.hbs
+++ b/templates/leftBar.hbs
@@ -25,7 +25,7 @@
   </a>
   <div id="docShareNav"></div>
   <div id="sidebarButton">
-    <span class="congtooltip sidebarButton" data-title="Move Sidebar"><i class="icon-sidebarButton"></i></span>
+    <span class="congtooltip sidebarButton" data-title="{{getString 'moveSidebar'}}"><i class="icon-sidebarButton"></i></span>
   </div>
   {{> dashboardCont}}
 </div>
