--- a/css/modules/screenshare.css
+++ b/css/modules/screenshare.css
@@ -9,18 +9,6 @@
   /* height: 100%; */
 }
 
-/* #virtualclassCont.congrea #virtualclassScreenShare { */
-
-/* margin-left: 55px; */
-
-/* } */
-
-/* #virtualclassCont.congrea #virtualclassScreenShare { */
-
-/* width: 99%; */
-
-/* } */
-
 #virtualclassCont.congrea.student #virtualclassScreenShare {
   margin-left: 5px;
 }
@@ -72,24 +60,6 @@
   background: radial-gradient(ellipse at center, #8d98a4 0%, #646d76 100%); /* W3C */
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#8d98a4', endColorstr='#646d76', GradientType=1); /* IE6-9 fallback on horizontal gradient */
 }
-
-/* #virtualclassCont.congrea #virtualclassScreenShare { */
-
-/* height: 95vh; */
-
-/* } */
-
-/* #virtualclassCont.congrea #virtualclassScreenShareLocal  #screenShrMsg { */
-
-/* width: 250px; */
-
-/* margin-left: 10%; */
-
-/* font-weight: normal; */
-
-/* text-align: center; */
-
-/* } */
 
 #virtualclassCont.congrea.teacher #virtualclassScreenShareLocalVideo {
   position: absolute;
@@ -166,7 +136,7 @@
 }
 
 #virtualclassCont.congrea #stopScreenShare button {
-  background-image: linear-gradient(to bottom, #f7f7f7 0%, #f7f7f7 100%) !important;
+  background-image: linear-gradient(to bottom, #f7f7f7 0%, #f7f7f7 100%);
   color: #000;
   border: 0.5px solid #f2f2f2;
   cursor: pointer;
@@ -179,7 +149,7 @@
 }
 
 #virtualclassCont.congrea #screenController .share button {
-  background-image: linear-gradient(to bottom, #f7f7f7 0%, #f7f7f7 100%) !important;
+  background-image: linear-gradient(to bottom, #f7f7f7 0%, #f7f7f7 100%);
   border: 0.5px solid #f2f2f2;
   cursor: pointer;
   padding: 7.5px 8px 7.5px 8px;
@@ -195,12 +165,12 @@
 }
 
 #virtualclassCont.congrea #stopScreenShare button:hover {
-  background-image: linear-gradient(to bottom, #eaeaea 0%, #eaeaea 100%) !important;
+  background-image: linear-gradient(to bottom, #eaeaea 0%, #eaeaea 100%);
   border: 0.5px solid #e0e0e0;
 }
 
 #virtualclassCont.congrea #screenController .share button:hover {
-  background-image: linear-gradient(to bottom, #eaeaea 0%, #eaeaea 100%) !important;
+  background-image: linear-gradient(to bottom, #eaeaea 0%, #eaeaea 100%);
   border: 0.5px solid #e0e0e0;
 }
 
