--- a/css/modules/poll.css
+++ b/css/modules/poll.css
@@ -26,7 +26,7 @@
 }
 
 #virtualclassCont.congrea.teacher .bootstrap .pollNavBar {
-  border-bottom: none !important;
+  border-bottom: none;
   margin-left: 20px;
 }
 
@@ -99,9 +99,9 @@
   line-height: 1.428571;
 }
 
-#virtualclassCont.congrea #layoutPollBody .vcPollCont a span[data-toggle="congtooltip"]::before {
+/* #virtualclassCont.congrea #layoutPollBody .vcPollCont a span[data-toggle="congtooltip"]::before {
   font-size: 20px;
-}
+} */
 
 #virtualclassCont.congrea #layoutPollBody .vcPollCont a span[data-toggle="congtooltip"]:hover::before {
   color: #3c3c3c;
@@ -204,7 +204,7 @@
 #virtualclassCont.congrea #virtualclassPoll #stdPollContainer #optnNonVotd span,
 #virtualclassCont.congrea #virtualclassPoll #stdPollContainer #stdOptionCont span,
 #virtualclassCont.congrea #virtualclassPoll #layoutPoll .table > tbody > tr > td {
-  font-size: 0.91em !important;
+  font-size: 0.91em;
   letter-spacing: 0.03em;
 }
 
@@ -236,35 +236,13 @@
 }
 
 #virtualclassCont.congrea #virtualclassPoll .nav > li > a:hover {
-  background: #e6e6e6 !important;
+  background: #e6e6e6;
   color: #000;
-
-  /* background: -moz-radial-gradient(center, ellipse cover, #ffffff); */
-
-  /* !* FF3.6+ *! */
-
-  /* background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #ffffff), color-stop(100%, #ffffff)); */
-
-  /* !* Chrome,Safari4+ *! */
-
-  /* background: -webkit-radial-gradient(center, ellipse cover, #ffffff); */
-
-  /* !* Chrome10+,Safari5.1+ *! */
-
-  /* background: -o-radial-gradient(center, ellipse cover, #ffffff); */
-
-  /* !* Opera 12+ *! */
-
-  /* background: -ms-radial-gradient(center, ellipse cover, #ffffff); */
-
-  /* IE10+ */
-
-  /* W3C */
 }
 
 #virtualclassCont.congrea #virtualclassPoll .nav > li.active > a:hover {
-  background-color: black !important;
-  color: #fff !important;
+  background-color: black;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -276,19 +254,13 @@
 #virtualclassCont.congrea.teacher #virtualclassPoll .pollList .popover {
   width: 100%;
   height: auto;
-  display: block !important;
+  display: block;
   position: absolute;
   z-index: 10000;
-  left: 35% !important;
+  left: 35%;
   max-width: 300px;
   padding: 20px;
 }
-
-/* #virtualclassCont.congrea.teacher #virtualclassPoll #listQnContcourse .previewTxCont { */
-
-/* margin-bottom: 10px; */
-
-/* } */
 
 #virtualclassCont.congrea.student #stdPollContainer label {
   font-size: 14px;
@@ -299,7 +271,7 @@
 }
 
 #virtualclassCont.congrea.teacher #virtualclassPoll .vcPollCont .viewOpt label {
-  font-weight: normal !important;
+  font-weight: normal;
   word-break: break-word;
 }
 
@@ -318,7 +290,7 @@
 }
 
 #virtualclassCont.congrea.teacher #virtualclassPoll #listQnContcourse #optsTxCont div label {
-  font-weight: normal !important;
+  font-weight: normal;
 }
 
 #virtualclassCont.congrea.teacher #virtualclassPoll .vcPollCont .qnText .pollPreview {
@@ -334,7 +306,7 @@
 }
 
 #virtualclassCont.congrea.teacher #virtualclassPoll .vcPollCont .viewOpt input {
-  margin-left: -19px !important;
+  margin-left: -19px;
   margin-top: 5px;
   float: left;
 }
@@ -485,11 +457,11 @@
 }
 
 #virtualclassCont.congrea #virtualclassPoll #stdPollContainer #stdOptionCont span {
-  font-size: 12px !important;
+  font-size: 12px;
 }
 
 #virtualclassCont.congrea #virtualclassPoll #stdPollContainer .alert-success {
-  padding: 12px !important;
+  padding: 12px;
 }
 
 #virtualclassCont.congrea.student #virtualclassPoll .pollNavBar > li.active {
@@ -554,7 +526,7 @@
 }
 
 .congrea.teacher .pollList td.qnText.col-sm-8 {
-  position: relative !important;
+  position: relative;
 }
 
 #virtualclassCont.congrea.teacher #layoutPollBody .table-responsive .pollList tbody tr:last-child td.qnText .popover-content {
@@ -592,7 +564,7 @@
   }
 
   .congrea.teacher .pollList .popover-content::-webkit-scrollbar {
-    width: 5px !important;
+    width: 5px;
   }
 }
 
