--- a/css/modules/whiteboard.css
+++ b/css/modules/whiteboard.css
@@ -226,7 +226,7 @@ ul.fontSizeList span {
 .shapesToolbox[data-currtool="rectangle"] .shapes_icon a,
 .shapesToolbox[data-currtool="triangle"] .shapes_icon a,
 #virtualclassCont.congrea .shapesToolbox[data-currtool="oval"] .shapes_icon a {
-  padding: 8px 13px 9px 14px !important;
+  padding: 8px 13px 9px 14px;
 }
 
 #virtualclassCont.congrea .shapesToolbox a {
@@ -238,7 +238,7 @@ ul.fontSizeList span {
 }
 
 #virtualclassCont.congrea .shapesToolbox[data-currtool="circle"] .shapes_icon a {
-  padding: 8px 13px 9px 14px !important;
+  padding: 8px 13px 9px 14px;
 }
 
 #virtualclassCont.congrea .shapesToolbox .shapesTool {
@@ -437,7 +437,7 @@ ul.fontSizeList {
 }
 
 #virtualclassCont.congrea #virtualclassAppContainer .virtualclass .commandToolsWrapper .tool ul li.selected span {
-  background-color: #fff !important;
+  background-color: #fff;
 }
 
 #virtualclassCont.congrea #virtualclassAppContainer .virtualclass .commandToolsWrapper .tool[data-tool="font"] ul.fontSizeList span {
@@ -463,7 +463,7 @@ ul.fontSizeList {
 
 #virtualclassCont.congrea #virtualclassAppContainer .virtualclass .commandToolsWrapper .tool[data-tool="font"] ul.fontSizeList span.selected {
   background-color: #000;
-  color: #fff !important;
+  color: #fff;
 }
 
 #virtualclassCont.congrea #virtualclassAppContainer .virtualclass .commandToolsWrapper .tool[data-tool="font"] ul.fontSizeList span::after {
