Remove dynamic string from data-audio-playing

--- a/templates/audioWidget.hbs
+++ b/templates/audioWidget.hbs
@@ -2,12 +2,11 @@
   <ul class="nav navbar-nav" id="mainAudioPanel">
 
 
-    <li id="speakerPressOnce" class="{{classes}}" data-audio-playing={{getString 'dap'}}>
+    <li id="speakerPressOnce" class="{{classes}}" data-audio-playing="false">
       <a id="speakerPressonce" class="congtooltip" data-title="{{audio_tooltip}}" data-meeting="{{meetingMode}}" name="speakerPressonceAnch"> 
         <span id="speakerPressingbtnIcon" class="audioIcon silenceDetect cgIcon" data-silence-detect="stop"></span>
       </a>
     </li>
-
 <!--
     <li class="prechk congtooltip" data-title="Precheck" id="precheckTest">
       <a><span class="precheck cgIcon"  id="precheckSetting" ></span></a>
