Dynamic string for clear all button in note

--- a/templates/askQuestion/note.hbs
+++ b/templates/askQuestion/note.hbs
@@ -4,7 +4,7 @@
 
     </div>
     <div id="noteNavigationContainer" class="children">
-      <div class="clearAll" data-component="note"><span class="event" data-event="clearall"> Clear All </span></div>
+      <div class="clearAll" data-component="note"><span class="event" data-event="clearall"> {{getString 'ClearAll'}} </span></div>
       <div id="noteNavigation" class="navigation">
         <div class="previous deactive" data-component="note"> <span class="event" data-event="previous"></span> </div>
         <div class="notenumber"> <span class="current">1 /</span> <span class="total"> 1</span></div>
