--- a/templates/askQuestion/note-content-area.hbs
+++ b/templates/askQuestion/note-content-area.hbs
@@ -1,3 +1,3 @@
 <div class="context note" data-context="{{context}}" data-component="note">
-  <textarea class = 'text content' placeholder="Write your note here" data-event="save"> </textarea>
+  <textarea class = 'text content' placeholder="{{getString 'notePlaceholder'}}" data-event="save"> </textarea>
 </div>
