Add Strings for poll questions placeholder

--- a/templates/poll/modal.hbs
+++ b/templates/poll/modal.hbs
@@ -9,16 +9,16 @@
         <div id="qnTxCont" class="row pollTxCont">
           <label class="pollLabel">{{getString 'Question'}} :</label>
           <div class="inputWrapper clearfix clearfix">
-            <textarea id="q" class="qn form-control" rows="1" placeholder="Type question"></textarea>
+            <textarea id="q" class="qn form-control" rows="1" placeholder="{{getString 'typeQuestion'}}"></textarea>
           </div>
         </div>
         <div id="optsTxCont" class="row pollTxCont">
           <label class="optionLabel">{{getString 'Options'}}</label>
           <div class="inputWrapper clearfix">
-            <textarea id="1" class="opt form-control" placeholder="Type option" rows="1"></textarea>
+            <textarea id="1" class="opt form-control" placeholder="{{getString 'typeOption'}}" rows="1"></textarea>
           </div>
           <div class="inputWrapper clearfix">
-            <textarea id="2" class="opt form-control" rows="1" placeholder="Type option"></textarea>
+            <textarea id="2" class="opt form-control" rows="1" placeholder="{{getString 'typeOption'}}"></textarea>
           </div>
           <div id="addMoreCont" class="addMoreCont">
             <span class="icon-plus-circle"></span>
