--- a/templates/poll/optioninput.hbs
+++ b/templates/poll/optioninput.hbs
@@ -1,5 +1,5 @@
 <div class="inputWrapper clearfix">
-  <textarea rows="1" id="option{{close.index}}" class="opt form-control parent" placeholder="Type option"
+  <textarea rows="1" id="option{{close.index}}" class="opt form-control parent" placeholder="{{getString 'typeOption'}}"
   ></textarea>
   {{#if close.closeBtn}}
   <a id="remove{{close.index}}" class="close child">×</a>
